refactor update subscription method