@@ -4,6 +4,7 @@ import com.digitalHouse.beerClub.exeptions.BadRequestException;
 import com.digitalHouse.beerClub.exeptions.NotFoundException;
 import com.digitalHouse.beerClub.exeptions.ServiceException;
 import com.digitalHouse.beerClub.mapper.Mapper;
+import com.digitalHouse.beerClub.model.Benefit;
 import com.digitalHouse.beerClub.model.Subscription;
 import com.digitalHouse.beerClub.model.dto.SubscriptionDTO;
 import com.digitalHouse.beerClub.repository.IBenefitRepository;
@@ -12,6 +13,7 @@ import com.digitalHouse.beerClub.service.interfaces.ISubscriptionService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class SubscriptionService implements ISubscriptionService {
@@ -47,19 +49,26 @@ public class SubscriptionService implements ISubscriptionService {
 
     @Override
     public SubscriptionDTO update(SubscriptionDTO subscriptionDTO, Long id) throws NotFoundException {
-//        Subscription subscription = subscriptionRepository.findById(id).orElseThrow(() -> new NotFoundException("Subscription not found"));
-//        subscription.setName(subscriptionDTO.getName());
-//        subscription.setDescription(subscriptionDTO.getDescription());
-//        subscription.setPrice(subscriptionDTO.getPrice());
-//        subscription.setIsRecommended(subscriptionDTO.getIsRecommended());
+        Subscription subscription = subscriptionRepository.findById(id).orElseThrow(() -> new NotFoundException("Subscription not found"));
+        subscription.setName(subscriptionDTO.getName());
+        subscription.setDescription(subscriptionDTO.getDescription());
+        subscription.setPrice(subscriptionDTO.getPrice());
+        subscription.setIsRecommended(subscriptionDTO.getIsRecommended());
+
+//        subscription.getBenefits().forEach(b -> benefitRepository.deleteById(b.getId()));
 //
-//
-//        subscription.setBenefits(subscriptionDTO.getBenefits().stream().map(b -> mapper.converter(b, Benefit.class)).toList());
-//        Subscription subscriptionUpdated = subscriptionRepository.save(subscription);
-//
-//
-//        return mapper.converter(subscriptionUpdated,SubscriptionDTO.class);
-        return null;
+//        List<Benefit> benefits = subscriptionDTO.getBenefits().stream().map(b-> mapper.converter(b,Benefit.class)).toList();
+//        List<Benefit> newBenefits = benefits.stream().map(benefitRepository::save).collect(Collectors.toList());
+        List<Benefit> benefits = subscription.getBenefits();
+        benefits.clear();
+        List<Benefit> newBenefits = subscriptionDTO.getBenefits().stream().map(b-> mapper.converter(b,Benefit.class)).collect(Collectors.toList());
+        benefits.addAll(newBenefits);
+
+        subscription.setBenefits(newBenefits);
+        Subscription subscriptionUpdated = subscriptionRepository.save(subscription);
+
+
+        return mapper.converter(subscriptionUpdated,SubscriptionDTO.class);
     }
 
     @Override
